crates/iroha_primitives/tests/ui_fail/must_use_not_used.stderr
error: unused `MustUse` that must be used
 --> tests/ui_fail/must_use_not_used.rs:6:5
  |
6 |     MustUse::new(5);
  |     ^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/ui_fail/must_use_not_used.rs:1:9
  |
1 | #![deny(unused_must_use)]
  |         ^^^^^^^^^^^^^^^
help: use `let _ = ...` to ignore the resulting value
  |
6 |     let _ = MustUse::new(5);
  |     +++++++
